# ESP32-TMC2208-UART-Component

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
components/stepper_driver/: CMakeLists.txt
components/stepper_driver/include/: stepper_driver.h  stepper_driver_tmc2208.h  stepper_driver_tmc2208_base.h
components/stepper_driver/src/: stepper_driver.c  stepper_driver_tmc2208.c
src/: CMakeLists.txt  main.c  stepper_task.c  stepper_task.h
